carrinho e form de endereço de entrega

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -1,4 +1,5 @@
 field.required=Este campo é obrigatório.
+field.invalid=O valor inserido é inválido.
 field.nome.incompleto=Insira seu nome e sobrenome.
 field.nome.invalido= O nome inserido é inválido.
 field.nomeDeUsuario.invalido = O nome de usuário é inválido. Deve conter apenas letras sem acentos, ou números.
