Sistema de pedidos e menu do usuário.

--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -8,3 +8,12 @@ field.nomeDeUsuario.existe = Este nome de usuário já foi registrado.
 field.email.existe = Este email já foi cadastrado.
 field.senha.fraca = A senha deve conter pelo menos 8 caracteres.
 field.senha.confirmacao.diferente = A cofirmação está diferente da senha inserida.
+field.senha.incorreta = A senha está incorreta.
+Min.pagamento.valorAReceber = O valor para troco não pode ser menor do que 0.
+Min.pagamento.valor = O valor não pode ser menor do que 0.
+ValorAReceberValido.pagamento = O valor para o troco é inválido. Deve ser maior ou igual ao valor da compra.
+contato.required = Insira um número de celular ou telefone fixo, pelo menos um dos dois.
+telefone.invalid = O número de telefone inserido é inválido.
+celular.invalid = O número de celular inserido é inválido.
+endereco.cep.invalid = O cep inserido é inválido.
+endereco.numero.invalid = Número inválido.
